# fastapi_ai_assistant

./: .gitignore  LICENSE  LOGGING.md  README.md  logging_example.py  pyproject.toml  requirements.txt
outfancy/: chart.py  table.py  widgets.py  window.py
src/: README.md  config.template.toml  main.py  requirements.txt  shared.py
src/templates/: index.html
