[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outfancy"
version = "0.9.6"
authors = [
  { name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com" }
]
description = "Python3.10+ library to print tables and line charts in Terminal."
readme = "README.md"
requires-python = ">=3.10"

license = "MIT"
license-files = ["LICENSE"]

keywords = ["rendering", "graphical", "terminal", "chart", "graph"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0"
]

[project.urls]
Repository = "https://github.com/carlosplanchon/outfancy.git"

[tool.setuptools]
packages = ["outfancy"]
